[tool.poetry]
name = "lockless-cache"
version = "0.1.0"
description = ""
authors = ["Roberto Di Remigio Eikås <roberto@totaltrash.xyz>"]

[tool.poetry.dependencies]
python = "~3.8"
scipy = "^1.9"
pyscf = { git = "https://github.com/stknecht/pyscf.git", branch = "macosx-workarounds", optional = true, markers = "sys_platform != 'win32'" }

[tool.poetry.dev-dependencies]
pytest = "^7"

[tool.poetry.extras]
pyscf = ['pyscf']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
